--- a/app/src/main/res/layout/activity_see_trucks.xml
+++ b/app/src/main/res/layout/activity_see_trucks.xml
@@ -12,5 +12,13 @@
         android:layout_marginTop="88dp"
         app:layout_constraintTop_toTopOf="parent"
         tools:layout_editor_absoluteX="-4dp"
-        android:id="@+id/recyclerView"/>
+        android:id="@+id/recyclerView1"/>
+
+    <Button
+        android:id="@+id/backToVendorOptions"
+        android:layout_width="44dp"
+        android:layout_height="48dp"
+        android:text="="
+        tools:layout_editor_absoluteX="12dp"
+        tools:layout_editor_absoluteY="21dp" />
 </androidx.constraintlayout.widget.ConstraintLayout>
