--- a/app/src/main/res/layout/activity_edit_menu_interface.xml
+++ b/app/src/main/res/layout/activity_edit_menu_interface.xml
@@ -21,29 +21,36 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Apply Changes"
-        tools:layout_editor_absoluteX="159dp"
-        tools:layout_editor_absoluteY="664dp" />
+        app:layout_constraintEnd_toEndOf="@+id/headerText"
+        app:layout_constraintStart_toStartOf="@+id/headerText"
+        tools:layout_editor_absoluteY="667dp" />
 
     <EditText
         android:id="@+id/headerText"
         android:layout_width="242dp"
         android:layout_height="48dp"
+        android:layout_marginTop="24dp"
         android:ems="10"
         android:inputType="textPersonName"
         android:text="Select a menu item to edit"
         android:textStyle="bold"
-        tools:layout_editor_absoluteX="84dp"
-        tools:layout_editor_absoluteY="98dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/backToEditTrucks" />
 
     <Button
         android:id="@+id/addItemButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Add Item"
-        tools:layout_editor_absoluteX="307dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.94"
+        app:layout_constraintStart_toEndOf="@+id/backToEditTrucks"
         tools:layout_editor_absoluteY="8dp" />
 
     <TableRow
+        android:id="@+id/tableRow"
         android:layout_width="409dp"
         android:layout_height="516dp"
         tools:layout_editor_absoluteX="1dp"
