--- a/app/src/main/res/layout/activity_edit_truck_interface.xml
+++ b/app/src/main/res/layout/activity_edit_truck_interface.xml
@@ -6,30 +6,32 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <Button
-        android:id="@+id/backToSeeTrucks"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:text="="
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/constraintLayout3"
         android:layout_width="383dp"
         android:layout_height="643dp"
-        android:layout_marginTop="16dp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.571"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/backToEditTrucks2">
+        app:layout_constraintTop_toBottomOf="@+id/backToSeeTrucks">
+
+        <EditText
+            android:id="@+id/editTruckHours2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:ems="10"
+            android:inputType="time"
+            app:layout_constraintEnd_toEndOf="@+id/editTruckHours"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="@+id/editTruckHours"
+            app:layout_constraintTop_toBottomOf="@+id/editTruckHours" />
 
         <EditText
             android:id="@+id/editTruckName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="40dp"
+            android:layout_marginTop="132dp"
             android:ems="10"
             android:inputType="text"
             app:layout_constraintEnd_toEndOf="parent"
@@ -41,7 +43,7 @@
             android:id="@+id/editTruckHours"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="40dp"
+            android:layout_marginTop="44dp"
             android:ems="10"
             android:inputType="time"
             app:layout_constraintEnd_toEndOf="@+id/editTruckName"
@@ -50,22 +52,10 @@
             app:layout_constraintTop_toBottomOf="@+id/editTruckName" />
 
         <EditText
-            android:id="@+id/editTruckHours2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="24dp"
-            android:ems="10"
-            android:inputType="time"
-            app:layout_constraintEnd_toEndOf="@+id/editTruckHours"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="@+id/editTruckHours"
-            app:layout_constraintTop_toBottomOf="@+id/editTruckHours" />
-
-        <EditText
             android:id="@+id/editTruckBio"
             android:layout_width="212dp"
             android:layout_height="37dp"
-            android:layout_marginTop="36dp"
+            android:layout_marginTop="40dp"
             android:inputType="text"
             app:layout_constraintEnd_toEndOf="@+id/editTruckHours2"
             app:layout_constraintHorizontal_bias="0.0"
@@ -81,6 +71,24 @@
             app:layout_constraintEnd_toEndOf="@+id/editTruckBio"
             app:layout_constraintStart_toStartOf="@+id/editTruckBio"
             app:layout_constraintTop_toBottomOf="@+id/editTruckBio" />
+
+        <Button
+            android:id="@+id/editMenuButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Edit Menu"
+            app:layout_constraintBottom_toBottomOf="@+id/backToSeeTrucks"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.864"
+            app:layout_constraintStart_toEndOf="@+id/backToSeeTrucks" />
+
+        <Button
+            android:id="@+id/backToSeeTrucks"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:text="="
+            tools:layout_editor_absoluteX="19dp"
+            tools:layout_editor_absoluteY="24dp" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
