--- a/app/src/main/res/layout/see_trucks_truck_card.xml
+++ b/app/src/main/res/layout/see_trucks_truck_card.xml
@@ -11,7 +11,7 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/constraintLayout"
-        android:layout_width="match_parent"
+        android:layout_width="347dp"
         android:layout_height="match_parent"
         android:layout_gravity="center_horizontal|fill|center_vertical">
 
@@ -22,6 +22,7 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
             android:layout_marginBottom="16dp"
+            android:contentDescription="@String/Truck Logo"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -57,6 +58,16 @@
             app:layout_constraintStart_toStartOf="@+id/companyNameTextView"
             app:layout_constraintTop_toBottomOf="@+id/companyNameTextView"
             tools:text="8:00am-9:00pm" />
+
+        <Switch
+            android:id="@+id/broadcastSwitch"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.827"
+            app:layout_constraintStart_toEndOf="@+id/imageView"
+            app:layout_constraintTop_toTopOf="parent" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
