--- a/app/src/main/res/layout/activity_notifications.xml
+++ b/app/src/main/res/layout/activity_notifications.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/graylight"
+    android:background="@drawable/curbside_gradient_background"
     android:padding="20dp"
     android:textColor="@color/colorPrimaryDark"
     tools:context=".Notifications">
@@ -13,10 +13,11 @@
         android:id="@+id/announcmentsText"
         android:layout_width="0dp"
         android:layout_height="60dp"
-        android:background="@drawable/rounded_corner"
+        android:background="@color/graylight"
         android:text="Announcements"
-        android:textAlignment="viewStart"
-        android:textColor="@color/graylight"
+        android:textAlignment="center"
+        android:textColor="@android:color/black"
+        
         app:layout_constraintBottom_toTopOf="@+id/order_ReadyText"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.432"
@@ -27,10 +28,10 @@
         android:id="@+id/order_ReadyText"
         android:layout_width="0dp"
         android:layout_height="60dp"
-        android:background="@drawable/rounded_corner"
+        android:background="@color/graylight"
         android:text="Order Ready"
-        android:textAlignment="viewStart"
-        android:textColor="@color/graylight"
+        android:textAlignment="center"
+        android:textColor="@android:color/black"
         app:layout_constraintBottom_toTopOf="@+id/location_ChangeText"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.432"
@@ -41,10 +42,10 @@
         android:id="@+id/location_ChangeText"
         android:layout_width="0dp"
         android:layout_height="60dp"
-        android:background="@drawable/rounded_corner"
+        android:background="@color/graylight"
         android:text="Location Change"
-        android:textAlignment="viewStart"
-        android:textColor="@color/graylight"
+        android:textAlignment="center"
+        android:textColor="@android:color/black"
         app:layout_constraintBottom_toTopOf="@+id/dealsText"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.486"
@@ -55,10 +56,10 @@
         android:id="@+id/dealsText"
         android:layout_width="0dp"
         android:layout_height="60dp"
-        android:background="@drawable/rounded_corner"
+        android:background="@color/graylight"
         android:text="Deals"
-        android:textAlignment="viewStart"
-        android:textColor="@color/graylight"
+        android:textAlignment="center"
+        android:textColor="@android:color/black"
         app:layout_constraintBottom_toTopOf="@+id/socialText"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.567"
@@ -69,9 +70,10 @@
         android:id="@+id/socialText"
         android:layout_width="0dp"
         android:layout_height="60dp"
-        android:background="@drawable/rounded_corner"
+        android:background="@color/graylight"
         android:text="Social"
-        android:textAlignment="viewStart"
+        android:textAlignment="center"
+        android:textColor="@android:color/black"
         app:layout_constraintBottom_toTopOf="@+id/offersText"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.48"
@@ -82,9 +84,10 @@
         android:id="@+id/offersText"
         android:layout_width="0dp"
         android:layout_height="60dp"
-        android:background="@drawable/rounded_corner"
+        android:background="@color/graylight"
         android:text="Offers"
-        android:textAlignment="viewStart"
+        android:textAlignment="center"
+        android:textColor="@android:color/black"
         app:layout_constraintBottom_toTopOf="@+id/emailText"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.486"
@@ -95,9 +98,10 @@
         android:id="@+id/emailText"
         android:layout_width="0dp"
         android:layout_height="60dp"
-        android:background="@drawable/rounded_corner"
+        android:background="@color/graylight"
         android:text="Email"
-        android:textAlignment="viewStart"
+        android:textAlignment="center"
+        android:textColor="@android:color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.486"
