--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,7 +9,6 @@
     android:background="@drawable/curbside_gradient_background"
     tools:context=".MainActivity">
 
-
     <TextView
         android:id="@+id/tv_title"
         android:layout_width="wrap_content"
@@ -17,7 +16,8 @@
         android:layout_marginBottom="8dp"
         android:text="@string/app_name"
         android:textSize="50sp"
-
+        android:textColor="@android:color/white"
+        android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/tv_subtitle"
         app:layout_constraintStart_toStartOf="@+id/tv_subtitle" />
 
