--- a/app/src/main/res/drawable/rounded_corner.xml
+++ b/app/src/main/res/drawable/rounded_corner.xml
@@ -2,11 +2,14 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android" >
 
     <solid
-        android:color="@color/startblue"/>
+        android:color="#fff6e5"/>
 
     <padding
         android:left="5dp"
         android:right="5dp"
         android:bottom="5dp"
         android:top="5dp" />
+    <corners
+        android:radius="10dp"
+        />
 </shape>
