--- a/app/src/main/res/layout/activity_contact_developers.xml
+++ b/app/src/main/res/layout/activity_contact_developers.xml
@@ -5,155 +5,58 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Profile"
-    android:orientation="vertical"
-    android:background="@color/graylight">
-    <LinearLayout
-        android:background="@drawable/gradientbackground"
-        android:layout_width="match_parent"
-        android:layout_height="279dp"
-        android:orientation="vertical">
+    android:background="@drawable/curbside_gradient_background"
+    android:padding="20dp">
 
-        <ImageView
-            android:layout_width="380dp"
-            android:layout_height="246dp"
-            android:layout_gravity="center_horizontal"
-            android:src="@drawable/cublogo" />
-
-
-
-    </LinearLayout>
+    <Button
+        android:id="@+id/backToEditTrucks2"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:background="@drawable/back_button_raised"
+        android:text="="
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
+        android:id="@+id/disp1"
         android:layout_width="303dp"
         android:layout_height="65dp"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginEnd="15dp"
-        android:layout_marginBottom="353dp"
+        android:text="joemorro@iu.edu"
+        android:textSize="27dp"
+        android:typeface="normal" />
+
+    <TextView
+        android:id="@+id/disp2"
+        android:layout_width="303dp"
+        android:layout_height="65dp"
         android:text="masonashment@gmail.com"
         android:textSize="24dp"
-        android:textColor="#000000"
-        android:textStyle="bold" />
-
-    <ImageView
-        android:layout_width="53dp"
-        android:layout_height="40dp"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginEnd="333dp"
-        android:layout_marginBottom="383dp"
-        android:src="@drawable/gmaillogo" />
+        android:typeface="normal" />
 
     <TextView
+        android:id="@+id/disp3"
         android:layout_width="320dp"
         android:layout_height="71dp"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginEnd="0dp"
-        android:layout_marginBottom="290dp"
+        android:layout_alignStart="@+id/null"
+        android:layout_alignEnd="@+id/null"
+        android:layout_marginStart="-3dp"
+        android:layout_marginEnd="-12dp"
         android:text="nickvanfossen93@gmail.com"
         android:textSize="23dp"
-        android:textColor="#000000"
-        android:textStyle="bold" />
-
-    <ImageView
-        android:layout_width="53dp"
-        android:layout_height="40dp"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginEnd="333dp"
-        android:layout_marginBottom="323dp"
-        android:src="@drawable/gmaillogo" />
+        android:typeface="normal" />
 
     <TextView
+        android:id="@+id/disp4"
         android:layout_width="303dp"
         android:layout_height="65dp"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginEnd="17dp"
-        android:layout_marginBottom="239dp"
-        android:text="joemorro@iu.edu"
-        android:textColor="#000000"
-        android:textSize="27dp"
-        android:textStyle="bold" />
-
-    <ImageView
-        android:layout_width="53dp"
-        android:layout_height="40dp"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginEnd="333dp"
-        android:layout_marginBottom="266dp"
-        android:src="@drawable/gmaillogo" />
-
-    <TextView
-        android:layout_width="303dp"
-        android:layout_height="65dp"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginEnd="15dp"
-        android:layout_marginBottom="188dp"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="3dp"
+        android:layout_marginTop="154dp"
         android:text="gserrani@iu.edu"
         android:textSize="27dp"
-        android:textColor="#000000"
-        android:textStyle="bold" />
-
-    <ImageView
-        android:layout_width="53dp"
-        android:layout_height="40dp"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginEnd="333dp"
-        android:layout_marginBottom="210dp"
-        android:src="@drawable/gmaillogo" />
-
-    <ImageView
-        android:layout_width="72dp"
-        android:layout_height="56dp"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginEnd="322dp"
-        android:layout_marginBottom="126dp"
-        android:src="@drawable/phonecurb" />
-
-    <TextView
-        android:layout_width="303dp"
-        android:layout_height="65dp"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginEnd="20dp"
-        android:layout_marginBottom="115dp"
-        android:text="(406) 208-2485"
-        android:textColor="#000000"
-        android:textSize="24dp"
-        android:textStyle="bold" />
-
-    <ImageView
-        android:layout_width="72dp"
-        android:layout_height="56dp"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginEnd="320dp"
-        android:layout_marginBottom="54dp"
-        android:src="@drawable/phonecurb" />
-
-    <TextView
-        android:layout_width="303dp"
-        android:layout_height="65dp"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginEnd="14dp"
-        android:layout_marginBottom="32dp"
-        android:text="(317) 965-4505"
-        android:textColor="#000000"
-        android:textSize="24dp"
-        android:textStyle="bold" />
+        android:typeface="normal" />
 
 
 </RelativeLayout>
