--- a/app/src/main/res/layout/activity_edit_menu_interface.xml
+++ b/app/src/main/res/layout/activity_edit_menu_interface.xml
@@ -4,7 +4,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@drawable/curbside_gradient_background"
+    android:padding="20dp">
 
     <Button
         android:id="@+id/backToEditTrucks"
@@ -12,7 +14,7 @@
         android:layout_height="48dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:text="="
+        android:background="@drawable/back_button_raised"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -20,19 +22,20 @@
         android:id="@+id/applyMenuChange"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:background="@drawable/rounded_corner"
         android:text="Apply Changes"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/headerText"
-        app:layout_constraintStart_toStartOf="@+id/headerText"
-        tools:layout_editor_absoluteY="667dp" />
+        app:layout_constraintStart_toStartOf="@+id/headerText" />
 
-    <EditText
+    <TextView
         android:id="@+id/headerText"
-        android:layout_width="242dp"
-        android:layout_height="48dp"
+        android:layout_width="207dp"
+        android:layout_height="34dp"
         android:layout_marginTop="24dp"
-        android:ems="10"
         android:inputType="textPersonName"
-        android:text="Select a menu item to edit"
+        android:text="Select an item to edit"
+        android:textSize="20dp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
@@ -43,16 +46,21 @@
         android:id="@+id/addItemButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:background="@drawable/rounded_corner"
         android:text="Add Item"
+        app:layout_constraintBottom_toBottomOf="@+id/backToEditTrucks"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.94"
         app:layout_constraintStart_toEndOf="@+id/backToEditTrucks"
-        tools:layout_editor_absoluteY="8dp" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TableRow
         android:id="@+id/tableRow"
-        android:layout_width="409dp"
-        android:layout_height="516dp"
-        tools:layout_editor_absoluteX="1dp"
-        tools:layout_editor_absoluteY="147dp" />
+        android:layout_width="372dp"
+        android:layout_height="548dp"
+        android:layout_marginTop="19dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/headerText" />
 </androidx.constraintlayout.widget.ConstraintLayout>
