--- a/app/src/main/res/layout/activity_favorites.xml
+++ b/app/src/main/res/layout/activity_favorites.xml
@@ -4,7 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".FavoritesActivity">
+    tools:context=".FavoritesActivity"
+    android:background="@drawable/curbside_gradient_background"
+    android:padding="20dp">
 
     <Button
         android:id="@+id/backToHomeButton"
@@ -14,7 +16,8 @@
         android:layout_marginTop="5dp"
         android:text="="
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:background="@drawable/back_button_raised"/>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/favRecyclerView"
