--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -42,9 +42,9 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="16dp"
-        android:background="@drawable/bg_round"
+        android:background="@drawable/rounded_corner"
         android:iconifiedByDefault="false"
-        android:queryHint="Which truck would you like?"
+        android:queryHint="Search"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -61,7 +61,8 @@
         app:layout_constraintBottom_toBottomOf="@+id/sv_location"
         app:layout_constraintEnd_toStartOf="@+id/sv_location"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/sv_location" />
+        app:layout_constraintTop_toTopOf="@+id/sv_location"
+        android:background="@drawable/back_button_raised"/>
 
     <Button
         android:id="@+id/locationButton"
@@ -73,7 +74,8 @@
         app:layout_constraintBottom_toBottomOf="@+id/sv_location"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/sv_location"
-        app:layout_constraintTop_toTopOf="@+id/sv_location" />
+        app:layout_constraintTop_toTopOf="@+id/sv_location"
+        android:background="@drawable/back_button_raised"/>
 
     <Button
         android:id="@+id/vendorButton"
@@ -82,7 +84,8 @@
         android:minWidth="48dp"
         android:text="V"
         app:layout_constraintStart_toStartOf="@+id/menuButton"
-        app:layout_constraintTop_toBottomOf="@+id/menuButton" />
+        app:layout_constraintTop_toBottomOf="@+id/menuButton"
+        android:background="@drawable/back_button_raised"/>
 
     <Button
         android:id="@+id/favoritesButton"
