--- a/app/src/main/res/layout/activity_notifications.xml
+++ b/app/src/main/res/layout/activity_notifications.xml
@@ -13,11 +13,11 @@
         android:id="@+id/announcmentsText"
         android:layout_width="0dp"
         android:layout_height="60dp"
-        android:background="@color/graylight"
+        android:background="@drawable/rounded_corner"
         android:text="Announcements"
         android:textAlignment="center"
         android:textColor="@android:color/black"
-        
+
         app:layout_constraintBottom_toTopOf="@+id/order_ReadyText"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.432"
@@ -28,7 +28,7 @@
         android:id="@+id/order_ReadyText"
         android:layout_width="0dp"
         android:layout_height="60dp"
-        android:background="@color/graylight"
+        android:background="@drawable/rounded_corner"
         android:text="Order Ready"
         android:textAlignment="center"
         android:textColor="@android:color/black"
@@ -42,7 +42,7 @@
         android:id="@+id/location_ChangeText"
         android:layout_width="0dp"
         android:layout_height="60dp"
-        android:background="@color/graylight"
+        android:background="@drawable/rounded_corner"
         android:text="Location Change"
         android:textAlignment="center"
         android:textColor="@android:color/black"
@@ -56,7 +56,7 @@
         android:id="@+id/dealsText"
         android:layout_width="0dp"
         android:layout_height="60dp"
-        android:background="@color/graylight"
+        android:background="@drawable/rounded_corner"
         android:text="Deals"
         android:textAlignment="center"
         android:textColor="@android:color/black"
@@ -70,7 +70,7 @@
         android:id="@+id/socialText"
         android:layout_width="0dp"
         android:layout_height="60dp"
-        android:background="@color/graylight"
+        android:background="@drawable/rounded_corner"
         android:text="Social"
         android:textAlignment="center"
         android:textColor="@android:color/black"
@@ -84,7 +84,7 @@
         android:id="@+id/offersText"
         android:layout_width="0dp"
         android:layout_height="60dp"
-        android:background="@color/graylight"
+        android:background="@drawable/rounded_corner"
         android:text="Offers"
         android:textAlignment="center"
         android:textColor="@android:color/black"
@@ -98,7 +98,7 @@
         android:id="@+id/emailText"
         android:layout_width="0dp"
         android:layout_height="60dp"
-        android:background="@color/graylight"
+        android:background="@drawable/rounded_corner"
         android:text="Email"
         android:textAlignment="center"
         android:textColor="@android:color/black"
@@ -112,7 +112,7 @@
         android:id="@+id/backToMenu"
         android:layout_width="45dp"
         android:layout_height="46dp"
-        android:background="@color/graylight"
+        android:background="@drawable/back_button_raised"
         android:src="@drawable/rounded_corner"
         android:text="="
         app:layout_constraintStart_toStartOf="parent"
