--- a/app/src/main/res/layout/see_trucks_truck_card.xml
+++ b/app/src/main/res/layout/see_trucks_truck_card.xml
@@ -13,7 +13,8 @@
         android:id="@+id/constraintLayout"
         android:layout_width="347dp"
         android:layout_height="match_parent"
-        android:layout_gravity="center_horizontal|fill|center_vertical">
+        android:layout_gravity="center_horizontal|fill|center_vertical"
+        android:background="@drawable/rounded_corner">
 
         <ImageView
             android:id="@+id/imageView"
@@ -22,7 +23,7 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
             android:layout_marginBottom="16dp"
-            android:contentDescription="@String/Truck Logo"
+            android:contentDescription="Truck Logo"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
