--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -53,6 +53,14 @@
             android:background="@drawable/rounded_corner"
             android:text="Privacy" />
 
+        <Button
+            android:id="@+id/addTruckButton2"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:layout_marginBottom="20dp"
+            android:background="@drawable/rounded_corner"
+            android:text="Privacy" />
+
     </LinearLayout>
 
     <Button
