some minor fixes on merged branches

--- a/app/src/main/res/layout/activity_edit_truck_interface.xml
+++ b/app/src/main/res/layout/activity_edit_truck_interface.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -12,13 +11,12 @@
         android:id="@+id/editTruckName"
         android:layout_width="0dp"
         android:layout_height="40dp"
-        android:layout_marginTop="132dp"
         android:background="@drawable/rounded_corner"
         android:inputType="text"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.482"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="@+id/guideline3" />
 
 
     <EditText
@@ -48,7 +46,7 @@
     <EditText
         android:id="@+id/editTruckBio"
         android:layout_width="0dp"
-        android:layout_height="200dp"
+        android:layout_height="150dp"
         android:layout_marginTop="40dp"
         android:background="@drawable/rounded_corner"
         android:inputType="text"
@@ -57,17 +55,17 @@
         app:layout_constraintStart_toStartOf="@+id/editTruckHours2"
         app:layout_constraintTop_toBottomOf="@+id/editTruckHours2" />
 
-        <Button
-            android:id="@+id/applyTruckChange"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="40dp"
-            android:text="Apply Changes"
-            app:layout_constraintEnd_toEndOf="@+id/editTruckBio"
-            app:layout_constraintHorizontal_bias="0.497"
-            app:layout_constraintStart_toStartOf="@+id/editTruckBio"
-            app:layout_constraintTop_toBottomOf="@+id/editTruckBio"
-            android:background="@drawable/rounded_corner"/>
+    <Button
+        android:id="@+id/applyTruckChange"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="40dp"
+        android:background="@drawable/rounded_corner"
+        android:text="Apply Changes"
+        app:layout_constraintEnd_toEndOf="@+id/editTruckBio"
+        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintStart_toStartOf="@+id/editTruckBio"
+        app:layout_constraintTop_toBottomOf="@+id/editTruckBio" />
 
     <Button
         android:id="@+id/backToSeeTrucks"
@@ -117,5 +115,12 @@
         android:text="Truck Description"
         app:layout_constraintBottom_toTopOf="@+id/editTruckBio"
         app:layout_constraintStart_toStartOf="@+id/editTruckBio" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.17" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
