--- a/app/src/main/res/layout/activity_add_menu_item.xml
+++ b/app/src/main/res/layout/activity_add_menu_item.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -16,31 +15,35 @@
         android:ems="10"
         android:inputType="textPersonName"
         android:text="Item Name"
-        tools:layout_editor_absoluteX="24dp"
-        tools:layout_editor_absoluteY="206dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.504"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/guideline4" />
 
     <EditText
         android:id="@+id/newItemPrice"
         android:layout_width="0dp"
         android:layout_height="40dp"
+        android:layout_marginTop="48dp"
         android:background="@drawable/rounded_corner"
         android:ems="10"
         android:inputType="textPersonName"
         android:text="Item Price"
         app:layout_constraintEnd_toEndOf="@+id/newItemName"
         app:layout_constraintStart_toStartOf="@+id/newItemName"
-        tools:layout_editor_absoluteY="286dp" />
+        app:layout_constraintTop_toBottomOf="@+id/newItemName" />
 
     <EditText
         android:id="@+id/newItemDescription"
         android:layout_height="40dp"
+        android:layout_marginTop="48dp"
         android:background="@drawable/rounded_corner"
         android:ems="10"
         android:inputType="textPersonName"
         android:text="Item Description"
         app:layout_constraintEnd_toEndOf="@+id/newItemPrice"
         app:layout_constraintStart_toStartOf="@+id/newItemPrice"
-        tools:layout_editor_absoluteY="383dp" />
+        app:layout_constraintTop_toBottomOf="@+id/newItemPrice" />
 
     <Button
         android:id="@+id/backToEditMenuInterface"
@@ -48,19 +51,26 @@
         android:layout_height="48dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
+        android:background="@drawable/back_button_raised"
         android:text="="
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:background="@drawable/back_button_raised"
-        />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/finalizeItem"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="96dp"
         android:background="@drawable/rounded_corner"
         android:text="Finalize Item"
         app:layout_constraintEnd_toEndOf="@+id/newItemDescription"
         app:layout_constraintStart_toStartOf="@+id/newItemDescription"
-        tools:layout_editor_absoluteY="529dp" />
+        app:layout_constraintTop_toBottomOf="@+id/newItemDescription" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.21" />
 </androidx.constraintlayout.widget.ConstraintLayout>
