CustomMap 1.1 (Custom icon)

--- a/app/src/main/res/layout/activity_vendor_options.xml
+++ b/app/src/main/res/layout/activity_vendor_options.xml
@@ -74,7 +74,8 @@
             android:id="@+id/retqr"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Retrieve QR Code" />
+            android:text="Retrieve QR Code"
+            android:background="@drawable/rounded_corner"/>
 
     </LinearLayout>
 
