--- a/app/src/main/res/layout/activity_favorites.xml
+++ b/app/src/main/res/layout/activity_favorites.xml
@@ -10,21 +10,36 @@
 
     <Button
         android:id="@+id/backToHomeButton"
-        android:layout_width="46dp"
+        android:layout_width="48dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="5dp"
         android:layout_marginTop="5dp"
         android:text="="
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:background="@drawable/back_button_raised"/>
+        android:background="@drawable/back_button_raised"
+        />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/favRecyclerView"
-        android:layout_width="409dp"
-        android:layout_height="676dp"
+        android:layout_width="408dp"
+        android:layout_height="651dp"
+        android:layout_marginTop="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/backToHomeButton" />
+
+    <TextView
+        android:id="@+id/favBanner"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Your Favs"
+        android:textAlignment="textEnd"
+        android:textColor="#ffffff"
+        android:textSize="30sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="@+id/backToHomeButton"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/backToHomeButton" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
