Return buttons updates. removed unnecessary activities.

--- a/app/src/main/res/layout/activity_edit_menu_interface.xml
+++ b/app/src/main/res/layout/activity_edit_menu_interface.xml
@@ -9,12 +9,12 @@
     android:padding="20dp">
 
     <Button
-        android:id="@+id/backToEditTrucks"
+        android:id="@+id/backToVendorOptions"
         android:layout_width="48dp"
         android:layout_height="48dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:background="@drawable/back_button_raised"
+        android:background="@drawable/ic_arrow_back"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
