--- a/app/src/main/res/layout/activity_add_menu_item.xml
+++ b/app/src/main/res/layout/activity_add_menu_item.xml
@@ -51,8 +51,7 @@
         android:layout_height="48dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:background="@drawable/back_button_raised"
-        android:text="="
+        android:background="@drawable/ic_arrow_back"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
