--- a/app/src/main/res/layout/activity_emaildev.xml
+++ b/app/src/main/res/layout/activity_emaildev.xml
@@ -16,8 +16,7 @@
         android:layout_height="48dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:background="@drawable/back_button_raised"
-        android:text="="
+        android:background="@drawable/ic_arrow_back"
         android:layout_marginBottom="20dp"/>
 
     <EditText
