--- a/app/src/main/res/layout/activity_notifications.xml
+++ b/app/src/main/res/layout/activity_notifications.xml
@@ -112,9 +112,7 @@
         android:id="@+id/backToMenu"
         android:layout_width="45dp"
         android:layout_height="46dp"
-        android:background="@drawable/back_button_raised"
-        android:src="@drawable/rounded_corner"
-        android:text="="
+        android:background="@drawable/ic_arrow_back"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
