--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -8,17 +8,19 @@
     android:layout_alignParentLeft="true"
     android:background="@drawable/curbside_gradient_background"
     android:orientation="vertical"
+    android:padding="10dp"
     tools:context=".Profile">
 
     <LinearLayout
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
+        android:layout_width="match_parent"
+        android:layout_height="608dp"
         android:orientation="vertical"
         android:padding="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/backToHomeButton"
         app:layout_constraintVertical_bias="0.73">
 
         <Button
@@ -27,7 +29,8 @@
             android:layout_height="60dp"
             android:layout_marginBottom="20dp"
             android:background="@drawable/rounded_corner"
-            android:text="Notifications" />
+            android:text="Notifications"
+            android:textColor="#ffce73" />
 
         <Button
             android:id="@+id/settingsButton"
@@ -41,12 +44,18 @@
             android:id="@+id/favoritesButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="20dp"
+            android:height="60dp"
+            android:background="@drawable/rounded_corner"
             android:text="Favorites" />
 
         <Button
             android:id="@+id/rewardsButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="20dp"
+            android:height="60dp"
+            android:background="@drawable/rounded_corner"
             android:text="Rewards" />
 
         <Button
@@ -66,17 +75,11 @@
             android:text="Privacy" />
 
         <Button
-            android:id="@+id/addTruckButton2"
-            android:layout_width="match_parent"
-            android:layout_height="60dp"
-            android:layout_marginBottom="20dp"
-            android:background="@drawable/rounded_corner"
-            android:text="Privacy" />
-
-        <Button
             android:id="@+id/signOutButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:height="60dp"
+            android:background="@drawable/rounded_corner"
             android:text="Sign Out" />
 
     </LinearLayout>
@@ -87,8 +90,7 @@
         android:layout_height="48dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:background="@drawable/back_button_raised"
-        android:text="="
+        android:background="@drawable/ic_arrow_back"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
