--- a/app/src/main/res/layout/activity_see_trucks.xml
+++ b/app/src/main/res/layout/activity_see_trucks.xml
@@ -24,10 +24,9 @@
         android:layout_height="40dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
-        android:text="="
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:background="@drawable/back_button_raised" />
+        android:background="@drawable/ic_arrow_back" />
 
     <Button
         android:id="@+id/newTruckButton"
