--- a/app/src/main/res/layout/activity_truck_menu.xml
+++ b/app/src/main/res/layout/activity_truck_menu.xml
@@ -84,12 +84,9 @@
             android:id="@+id/backToHomeButton"
             android:layout_width="46dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="5dp"
-            android:layout_marginTop="5dp"
-            android:text="="
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            android:background="@drawable/back_button_raised"/>
+            android:background="@drawable/ic_arrow_back"/>
 
         <TextView
             android:id="@+id/truckNameText"
@@ -103,9 +100,9 @@
 
         <ImageButton
             android:id="@+id/truckFavoriteButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@drawable/truck_favorite_unpressed"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:background="@drawable/ic_favorite"
             app:layout_constraintBottom_toBottomOf="@+id/backToHomeButton"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="@+id/backToHomeButton" />
@@ -134,7 +131,7 @@
             android:layout_height="wrap_content"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/backToHomeButton"
             app:srcCompat="@drawable/cublogo" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
