--- a/app/src/main/res/layout/activity_vendor_options.xml
+++ b/app/src/main/res/layout/activity_vendor_options.xml
@@ -85,10 +85,9 @@
         android:layout_height="48dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:text="="
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:background="@drawable/back_button_raised"/>
+        android:background="@drawable/ic_arrow_back"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
