--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -8,7 +8,7 @@
     android:layout_alignParentLeft="true"
     android:background="@drawable/curbside_gradient_background"
     android:orientation="vertical"
-    android:padding="10dp"
+    android:padding="20dp"
     tools:context=".Profile">
 
     <LinearLayout
@@ -37,6 +37,7 @@
             android:layout_width="match_parent"
             android:layout_height="60dp"
             android:layout_marginBottom="20dp"
+            android:textColor="#ffa500"
             android:background="@drawable/rounded_corner"
             android:text="Settings" />
 
@@ -44,6 +45,7 @@
             android:id="@+id/favoritesButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:textColor="#ffa500"
             android:layout_marginBottom="20dp"
             android:height="60dp"
             android:background="@drawable/rounded_corner"
@@ -53,6 +55,7 @@
             android:id="@+id/rewardsButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:textColor="#ffa500"
             android:layout_marginBottom="20dp"
             android:height="60dp"
             android:background="@drawable/rounded_corner"
@@ -63,6 +66,7 @@
             android:layout_width="match_parent"
             android:layout_height="60dp"
             android:layout_marginBottom="20dp"
+            android:textColor="#ffa500"
             android:background="@drawable/rounded_corner"
             android:text="Account" />
 
@@ -71,6 +75,7 @@
             android:layout_width="match_parent"
             android:layout_height="60dp"
             android:layout_marginBottom="20dp"
+            android:textColor="#ffa500"
             android:background="@drawable/rounded_corner"
             android:text="Privacy" />
 
@@ -79,6 +84,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:height="60dp"
+            android:textColor="#ffa500"
             android:background="@drawable/rounded_corner"
             android:text="Sign Out" />
 
