--- a/app/src/main/res/layout/activity_add_menu_item.xml
+++ b/app/src/main/res/layout/activity_add_menu_item.xml
@@ -62,6 +62,7 @@
         android:layout_marginTop="96dp"
         android:background="@drawable/rounded_corner"
         android:text="Finalize Item"
+        android:textColor="#ffa500"
         app:layout_constraintEnd_toEndOf="@+id/newItemDescription"
         app:layout_constraintStart_toStartOf="@+id/newItemDescription"
         app:layout_constraintTop_toBottomOf="@+id/newItemDescription" />
